syntax = "proto3";
package th2.utility;

import "th2/infra.proto";

option java_multiple_files = true;
option java_package = "com.exactpro.th2.utility.messagecomparator.grpc";

service MessageComparatorService {
    // Compare one or more messages using one filter
    rpc compareMessages (CompareMessagesRequest) returns (CompareMessagesResponse);
}

message CompareMessagesRequest {
    MessageFilter filter = 1;
    repeated Message actuals = 2;
}

message CompareMessagesResponse {
    repeated MessageComparisonResult Comparison_results = 1;
}

message MessageComparisonResult {
    MessageID actual_message_id = 1;
    ComparisonEntry comparison_result = 2;
}

message ComparisonEntry {
    ComparisonEntryType type = 1; // is null for root entry otherwise it is required
    ComparisonEntryStatus status = 2; // is null for collection entry type otherwise it is required
    string expected = 3; // This value is null for root entry otherwise it is required
    string actual = 4; // This value is null for root entry otherwise it is required
    FilterOperation operation = 5; // is null for root entry otherwise it is required
    bool is_key = 6; // is null for root entry otherwise it is required
    map<string, ComparisonEntry> fields = 7;
}

enum ComparisonEntryType {
    FIELD = 0;
    COLLECTION = 1;
}

enum ComparisonEntryStatus {
    NA = 0;
    PASSED = 1;
    FAILED = 2;
}